Add Azure Search Proxy to Auto Complete
adds functionality to use with Azure / Refiners / SPA Search Results /
Do it!!!

--- a/jQuery.gooAutoComplete.Test.html
+++ b/jQuery.gooAutoComplete.Test.html
@@ -7,6 +7,7 @@
 <li><a href="jQuery.gooAutoComplete.TestSimpleList.html">Test Simple Single Column Auto Complete.</a></li>
 <li><a href="jQuery.gooAutoComplete.TestThreeColumnList.html">Test Three List / Three Column Auto Complete.</a></li>
 <li><a href="jQuery.gooAutoComplete.TestCustomTemplate.html">Test Three List / Three Column with Custom Item Template &amp; filter.</a></li>
+<li><a href="jQuery.gooAutoComplete.TestAzureSearchProxy.html">Test Azure Search Proxy.</a></li>
 </ul>
 </body>
 </html>
